--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ header {
   padding: 15px;
   margin-bottom: 15px;
   cursor: pointer;
-  transition: 0.3s;
+
 }
 
 .party-card:hover {
@@ -59,15 +59,44 @@ header {
   display: flex;
   gap: 15px;
   align-items: center;
+  justify-content: space-between;
+  position: relative;
 }
 
-.party-content img {
+.logo-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.party-content > img {
   width: 60px;
+}
+
+.logo-wrapper img {
+  width: 60px;
+}
+
+.details {
+  flex: 1;
 }
 
 .details h3 {
   margin: 0 0 5px;
 }
+
+/* CROWN ICON */
+.crown-icon {
+  display: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  position: relative
+}
+
+.crown-icon img {
+  width: 50px;
+  height: 50px;
+}
+
 
 /* RESULT BAR */
 .bar {
@@ -92,7 +121,7 @@ header {
 }
 
 /* submit */
-.submit-btn {
+#submit-btn {
   width: 100%;
   margin-top: 20px;
   padding: 12px;
@@ -104,7 +133,7 @@ header {
   cursor: pointer;
 }
 
-.submit-btn:hover {
+#submit-btn:hover {
   background: #095f2f;
 }
 
